# capstone-fraud-detection

./: .gitignore  1_Datasets_Understanding_&_Clean.ipynb  3_FurtherProcess.ipynb  README.md  docker-compose.yml  requirements.txt
EDA/: 2_EDA.ipynb  2_EDA_code_.py  2_eda_code.py  Datasets used for EDA
assets/: DatasetsDownloadPath.txt  identity_sample.csv
backend/: Dockerfile  demo_saving_model.py  model_tester.ipynb  pyproject.toml  reponsetime_analysis.ipynb  requirements.txt  server.py  utils.py
backend/schemas/: gen_test.py  sample_data.schema  syslog.db  syslog.schema
capstone-fraud-detection/models/: 3_FurtherProcess.ipynb
models/: 1_DataClean.ipynb  1_Datasets_Understanding_&_Clean.ipynb  1_datasets_understanding_&_clean.py  3_FurtherProcess.ipynb  3_Join_datasets_with_further_data_clean.ipynb  3_join_datasets_with_further_data_clean.py  6_Supervised_Machine_Learning_Models.ipynb  README.md  copy_of_6_sml_with_non_dummy.py  datasets_sampling.ipynb
models/Unsupervised Learning/: 4_pca_and_kmeans_code.py  5_hierarchical_clustering.ipynb  5_hierarchical_clustering_and_DBSCAN.ipynb  5_hierarchical_clustering_and_dbscan_code.py  Data
models/pre-data-processing/: Data_precessing.ipynb
server/: package-lock.json  package.json
server/src/: App.js  index.js
server/src/components/Dashboard/: dashboard.js
server/src/components/Dashboard/components/: charts.js  clock.js  clock.scss  map.js  serverCard.css  serverCard.js  summaryCard.js
server/src/components/Layout/: layout.js
server/src/components/Models/: models.js
