[tool.poetry]
name = "fraud-apis"
version = "0.1.0"
description = ""
authors = ["Zheqi Liu <lzq445566@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.3"
Flask-Cors = "^3.0.10"
numpy = "^1.22.3"
scikit-learn = "^1.0.2"
pandas = "^1.4.2"
xgboost = "0.90"
requests = "^2.27.1"
Faker = "^13.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
